# django_select2_autofill

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/django_select2_autofill/: __init__.py  apps.py  widgets.py
src/django_select2_autofill/static/django_select2_autofill/js/: autofill.js
